# RustTools

./: .gitignore  CLAUDE.md  Cargo.toml  MODEL_DOWNLOAD_GUIDE.md  ONBOARDING.md  README.md  SPEC.md  available_models.json  available_models.rs  available_models.txt  build-single-file.sh  check_all_yolo_models.py  check_multiple_sources.py  compress.sh  diagnose-tauri.ps1  download_models.py  find_available_models.py  find_github_assets.py  fix-tauri-dev.ps1  github_latest_onnx.json  index.html  model_urls_check.json  model_urls_verified.json  optimize-desktop-capture.ps1  package.json  pyproject.toml  restart-tauri.ps1  rust-desktop-inference-debug.ps1  scan_all_yolo_models.py  search_model_urls.py  search_yolo_urls.py  start-tauri-dev.ps1  tailwind.config.js  test-performance.ps1  test_yolo11_url.py  verify_all_models.py  verify_model_urls.ps1  verify_model_urls.py  vite.config.ts  前端性能优化指南.md  (+10 more)
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  main.rs  route.rs  theme.rs
crates/app/src/agent/: mod.rs  workspace.rs
crates/app/src/agent/agent_core/: agent.rs  executor.rs  mod.rs  orchestrator.rs  planner.rs  session.rs  session_store.rs  swarm.rs
crates/app/src/agent/api_client/: anthropic.rs  gemini.rs  mod.rs  model_registry.rs  ollama.rs  openai.rs  provider.rs  unified.rs
crates/app/src/agent/config/: agent_file.rs  directory.rs  manager.rs  mod.rs  models.rs
crates/app/src/agent/long_task/: checkpoint.rs  mod.rs  recovery.rs  task_queue.rs
crates/app/src/agent/mcp/: client.rs  mod.rs  server.rs  tool_adapter.rs  transport.rs  types.rs
crates/app/src/agent/skills/: builtin.rs  mod.rs
crates/app/src/agent/system_prompt/: mod.rs
crates/app/src/agent/tools/: code_edit.rs  fetch_url.rs  filesystem.rs  git_diff.rs  git_status.rs  glob_tool.rs  grep.rs  list_processes.rs  mod.rs  search.rs  system_info.rs  terminal.rs  tool.rs  web_search.rs
crates/app/src/models/: mod.rs
crates/app/src/services/: async_capture.rs  burn_trainer.rs  env.rs  mod.rs  project.rs  python_env.rs  scrap_burn_final.rs  trainer.rs  yolo_dataset.rs  yolo_loss.rs  yolo_onnx.rs
crates/app/src/ui/: annotation.rs  desktop.rs  device.rs  gpu_preview.rs  hub.rs  icons.rs  mod.rs  project.rs  settings.rs  training.rs  video.rs  welcome.rs
doc/: 0-index.md
doc/已完成/: Burn训练器使用指南.md  Burn训练器实施总结.md  Python环境检测缓存-使用说明.md  Python环境检测缓存-实施总结.md  Python环境检测缓存-快速使用指南.md  Python环境检测缓存-测试检查清单.md  Python环境检测缓存机制.md  前端API层整理.md  实时屏幕检测性能优化-总结.md  实时屏幕检测性能优化.md
doc/已完成/正在维护/: 03-YOLO推理优化-20260409.md
doc/快速指南/: 模型下载使用说明.md  模型下载镜像使用说明.md
doc/进行中/: 01-模块化架构设计-20260405.md  02-YOLO训练功能-20260406.md  03-YOLO推理优化-20260409.md
doc/验收标准/: 可测试验收标准-错误场景.md
docs/: APPLE_UI_DESIGN_SPEC.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/agent/: api.ts  index.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx  ErrorToast.tsx  ModelSelector.tsx  TitleBar.tsx
frontend/src/contexts/: AppErrorContext.tsx  ProjectContext.tsx
frontend/src/hooks/: usePtExport.ts  useTheme.ts
frontend/src/pages/: Annotation.tsx  Desktop.tsx  Device.tsx  Hub.tsx  ImageInference.tsx  Project.tsx  Settings.tsx  Training.tsx  Video.tsx  Welcome.tsx
frontend/test/: setup.ts
python/scripts/: export_pt_to_onnx.py  yolo_inference.py  yolo_server.py
src/: App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  PERFORMANCE_SETUP.md  RUST_NATIVE_SETUP.md  build_errors.txt  check.txt  check_output.txt  tauri.conf.json  性能优化快速指南.md  纯Rust方案实施指南.md
src-tauri/capabilities/: default.json
src-tauri/scripts/: video_infer.py  yolo-server.spec  yolo_server.py
src-tauri/src/: agent_commands.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  mod.rs  project.rs  yolo.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/commands/: file.rs  mod.rs  project.rs  settings.rs  watcher.rs
src-tauri/src/core/models/: mod.rs
src-tauri/src/core/services/: mod.rs
src-tauri/src/modules/yolo/commands/: desktop.rs  device.rs  env.rs  mod.rs  model_conversion.rs  opt_desktop.rs  optimized.rs  python_env.rs  train.rs  video.rs
src-tauri/src/modules/yolo/models/: mod.rs  training.rs
src-tauri/src/modules/yolo/services/: async_capture.rs  async_desktop_capture.rs  burn_inference.rs  burn_trainer.rs  desktop_capture.rs  desktop_capture_optimized.rs  desktop_capture_perf.rs  desktop_performance_test.rs  device.rs  env.rs  high_perf_capture.rs  high_perf_yolo.rs  high_performance_desktop_capture.rs  high_performance_inference.rs  high_performance_video_inference.rs  inference_core.rs  inference_engine.rs  mod.rs  model_converter.rs  model_optimizer.rs  opt_capture.rs  optimized_desktop_capture.rs  optimized_desktop_service.rs  optimized_inference.rs  optimized_video_service.rs  python_env.rs  realtime_video_inference.rs  scrap_burn_final.rs  scrap_burn_final_old.rs  scrap_burn_yolo.rs  scrap_capture.rs  streaming_video_inference.rs  trainer.rs  unified_inference.rs  video.rs  video_inference.rs  video_inference_optimized.rs  yolo_dataset.rs  yolo_gpu_inference.rs  yolo_inference_core.rs  (+2 more)
src-tauri/src/modules/yolo/services/optimized/: mod.rs  video_inference.rs
src/components/device/: DevicePage.tsx
src/components/layout/: ActivityBar.tsx  AppShell.tsx  Footer.tsx  HubPage.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TopMenu.tsx
src/components/results/: ModelConvertModal.tsx  ResultsPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/training/: TrainingPage.tsx
src/components/video/: VideoPage.tsx
src/components/workspace/: HomePage.tsx  NewProjectModal.tsx
src/core/api/: annotation.ts  common.ts  dataset.ts  desktop.ts  device.ts  file.ts  index.ts  model.ts  optimized.ts  project.ts  settings.ts  training.ts  types.ts  video.ts
src/modules/: index.ts  registry.ts  types.ts
src/stores/: routerStore.ts  settingsStore.ts  workspaceStore.ts
src/styles/: hub.css  index.css
文档/: Burn训练器实施总结.md
(+67 files in other folders)
