[project]
name = "rusttools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=1.6.0",
    "ultralytics>=8.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "loguru>=0.7.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "polars>=1.0.0",
    "psutil>=5.8.0",
    "ultralytics-thop>=2.0.18",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "pytest>=8.3.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
