[package]
name = "MyRustTools"
version = "1.0.0"
description = "Rust编写的一站式工具集"
authors = ["MyRustTools"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
notify = "8"
tokio = { version = "1", features = ["sync", "time", "process", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
rand = "0.9"
hex = "0.4"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
once_cell = "1.19"

# 目录和路径
dirs = "5.0"
serde_yaml = "0.9"

# 屏幕捕获 (高性能后端)
xcap = "0.1"

# 图像处理
image = "0.25"
ndarray = "0.16"

# Tract ONNX Runtime (pure Rust) - 当前使用这个因为Candle依赖冲突
tract-onnx = "0.22.0"

# 视频处理 (使用命令行ffmpeg)
# ffmpeg-next = "7.0"

# WebP 编码
webp = "0.3"

# 高性能锁
parking_lot = "0.12"

# 并行处理
rayon = "1.8"

# LRU 缓存
lru-cache = "0.1"

# Candle (HuggingFace ML framework - pure Rust)
# 注意：Candle 0.5.1需要 rand 0.9 和 rand_distr 0.5，与项目其他依赖冲突
# 如果需要使用Candle，需要更新项目中所有使用rand/rand_distr的依赖
# candle-core = "0.5.1"
# candle-nn = "0.5.1"
# candle-onnx = "0.5.1"

# 注意：PyTorch模型(.pt)无法在纯Rust中转换，因为.pt格式依赖Python序列化
# 如果需要转换.pt到.onnx，请使用Python脚本（参见scripts/convert_model.py）
