[package]
name = "MyRustTools"
version = "1.0.0"
description = "Rust编写的一站式工具集"
authors = ["MyRustTools"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
notify = "8"
tokio = { version = "1", features = ["sync", "time", "process", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
rand = "0.9"
hex = "0.4"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
once_cell = "1.19"

# 目录和路径
dirs = "5.0"
serde_yaml = "0.9"

# 屏幕捕获
scrap = "0.2"  # 高性能屏幕捕获（零拷贝）
xcap = "0.1"  # 备用捕获库

# 图像处理
image = "0.25"
ndarray = "0.16"

# Burn - Rust 原生深度学习框架（GPU 加速）
burn = "0.5"
burn-ndarray = "0.5"  # ndarray CPU 后端
# burn-wgpu = "0.5"   # WebGPU GPU 后端（需要 Vulkan SDK）
# burn-cudarc = "0.5" # CUDA GPU 后端（需要 CUDA Toolkit）

# Tch-rs - PyTorch Rust 绑定（模型转换）
# 注意：tch 需要 libtorch（会自动下载 ~200MB）
# 在 Windows 上需要 CUDA 11.8 或 12.1
# 设置环境变量 LIBTORCH=/path/to/libtorch 或让 tch 自动下载
tch = "0.5"

# Tract ONNX Runtime (pure Rust) - 备用 CPU 推理
tract-onnx = "0.22.0"

# 视频处理 (使用命令行ffmpeg)
# ffmpeg-next = "7.0"

# WebP 编码
webp = "0.3"

# 高性能锁
parking_lot = "0.12"

# 并行处理
rayon = "1.8"

# LRU 缓存
lru-cache = "0.1"

# Candle (HuggingFace ML framework - pure Rust)
# 注意：Candle 0.5.1需要 rand 0.9 和 rand_distr 0.5，与项目其他依赖冲突
# 如果需要使用Candle，需要更新项目中所有使用rand/rand_distr的依赖
# candle-core = "0.5.1"
# candle-nn = "0.5.1"
# candle-onnx = "0.5.1"

# 注意：PyTorch模型(.pt)无法在纯Rust中转换，因为.pt格式依赖Python序列化
# 如果需要转换.pt到.onnx，请使用Python脚本（参见scripts/convert_model.py）
