[package]
name = "rusttools-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "RustTools - YOLO training and inference tool"

[lib]
name = "rusttools_tauri_lib"
crate-type = ["rlib"]

[[bin]]
name = "rusttools-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rusttools-app = { path = "../crates/app" }
tauri-plugin-dialog = "2.7.0"
image = "0.25"
base64 = "0.22"
xcap = "0.1"
scrap = "0.2"
sysinfo = "0.33"
tauri-plugin-shell = "2"
