[package]
name = "rusttools-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "RustTools - YOLO training and inference tool"

[lib]
name = "rusttools_app"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["sync", "time", "process", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1"
futures = "0.3"
rand = "0.9"
hex = "0.4"
base64 = "0.22"

# Image processing
image = { version = "0.25", features = ["png", "jpeg"] }
ndarray = "0.16"

# Screen capture
scrap = "0.2"
xcap = "0.1"

# Deep Learning (Burn)
burn = "0.5"
burn-ndarray = "0.5"

# ONNX inference
tract-onnx = "0.22.0"

# WebP
webp = "0.3"

# Concurrency
parking_lot = "0.12"
rayon = "1.8"

# Caching
lru-cache = "0.1"

# Notifications
notify = "8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
async-trait = "0.1"

# SSE streaming
eventsource-stream = "0.2"

# File walking
walkdir = "2"

# Temporary files (testing)
tempfile = "3"

# JSON Schema
schemars = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"
[features]
default = []
