[package]
name = "rusttools-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "RustTools - YOLO training and inference tool"

[lib]
name = "rusttools_app"
crate-type = ["rlib"]

[dependencies]
# Async runtime
tokio = { version = "1", default-features = false, features = ["sync", "time", "process", "io-util", "macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
uuid = { version = "1", default-features = false, features = ["v4"] }
once_cell = "1.19"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "default-tls"] }
futures-util = "0.3"
bytes = "1"
rand = "0.9"
hex = "0.4"
base64 = "0.22"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# ONNX inference
tract-onnx = "0.22.0"

# Concurrency
parking_lot = { version = "0.12", features = ["send_guard"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
async-trait = "0.1"

# SSE streaming
eventsource-stream = "0.2"

# File walking
walkdir = "2"

# Pattern matching
regex = "1"
glob = "0.3"

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3"
[features]
default = []
